# aws-ec2-fast-api-crud-example

./: .gitignore  Dockerfile  README.md  example.env  notes.md  pyproject.toml  python_example.py  python_test.py
app/: crud.py  main.py  models.py  schemas.py
app/config/: config.py
app/db/: db.py
app/tests/: test_crud.py
infrastructure/: main.tf
scripts/: test.sh
terraform/: main.tf  variables.tf
