[project]
name = "aws-ec2-fast-api-crud-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.6",
    "pydantic>=2.10.4",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.6",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
]
