[project]
name = "aws-ec2-fast-api-crud-example"
version = "0.1.0"
description = "CRUD example with FastAPI and AWS EC2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.4",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.6",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.1"
]
